Update header of doc site

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -89,6 +89,9 @@ layout: table_wrappers
   </div>
   <div class="main" id="top">
     <div id="main-header" class="main-header">
+      <div class="Mydiv" style="text-align:right" valign="middle">
+        <h2> </h2>
+      </div>
       {% if site.search_enabled != false %}
         <div class="search">
           <div class="search-input-wrap">
