Amending colour of links

--- a/docs/_sass/support/_variables.scss
+++ b/docs/_sass/support/_variables.scss
@@ -70,6 +70,11 @@ $red-100: #f96e65 !default;
 $red-200: #e94c4c !default;
 $red-300: #dd2e2e !default;
 
+$wb-blue-gray: #002244;
+$wb-light-blue: #009FDA;
+$wb-dark-blue: #1B75B8;
+
+
 $body-background-color: $white !default;
 $sidebar-color: $grey-lt-000 !default;
 $search-background-color: $white !default;
@@ -81,7 +86,7 @@ $body-text-color: $grey-dk-100 !default;
 $body-heading-color: $grey-dk-300 !default;
 $search-result-preview-color: $grey-dk-000 !default;
 $nav-child-link-color: $grey-dk-100 !default;
-$link-color: $purple-000 !default;
+$link-color: $wb-blue-gray !default;
 $btn-primary-color: $purple-100 !default;
 $base-button-color: #f7f7f7 !default;
 
